# Motorsport-Strategy-Lab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
notebooks/: kaggle_demo.ipynb  kernel-metadata.json
reports/: audit_cases.md  data_availability_phase0.md  data_quality_phase1.md  degradation_phase2.md  endurance_audit.md  endurance_availability_phase0.md  endurance_degradation_phase1.md  endurance_safety_car_phase2.md  endurance_simulator_phase3.md  methodology.md  safety_car_phase3.md  simulator_phase4.md
scripts/: check_data_availability.py  demo_extensions.py  discover_endurance_events.py  generate_banner.py  generate_logo.py  inspect_external.py  materialise_endurance.py  materialise_endurance_fields.py  run_audit.py  run_degradation.py  run_endurance_audit.py  run_endurance_flags.py  run_endurance_models.py  run_f1_history_degradation.py  run_f1_history_pit_loss.py  run_f1_reliability.py  run_f1_weather.py  run_ingestion.py  run_multistop.py  run_prediction_backtest.py  run_safety_car.py  run_simulator_demo.py  run_track_position.py  run_wec_reliability.py
tests/: test_adversarial.py  test_adversarial_compound.py  test_adversarial_endurance.py  test_audit.py  test_cleaning.py  test_degradation.py  test_demo_extensions.py  test_endurance_artifacts.py  test_endurance_audit.py  test_endurance_degradation.py  test_endurance_loader.py  test_endurance_safety_car.py  test_endurance_simulator.py  test_endurance_validation.py  test_f1_history.py  test_f1_history_degradation.py  test_f1_history_pit_loss.py  (+17 more)
(+246 files in other folders)
