[project]
name = "motorsport-strategy-lab"
version = "0.1.0"
description = "F1 race strategy decision-support system: tyre degradation and safety-car models feeding a Monte Carlo pit-stop simulator, plus a retrospective audit of real strategy calls."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohammed Reda Medjadj" }]
dependencies = [
    "fastf1",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

