[project]
name = "motorsport-strategy-lab"
version = "0.1.0"
description = "Motorsport race-strategy decision-support system (F1, WEC, IMSA): tyre degradation and safety-car/neutralisation models feeding Monte Carlo pit-stop simulators, with a retrospective audit of real F1 strategy calls."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohammed Reda Medjadj" }]
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
dependencies = [
    "fastf1",
    "scipy",
    "duckdb",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

